fix character select

--- a/home.html
+++ b/home.html
@@ -76,9 +76,9 @@
 				      <img class="characterImg" src="images/characters/solomon/solomonWalkDown.gif">
 				    </label>
 				    <label class="radio-inline">
-				      <input type="radio" name="optradio" value="miranda"
+				      <input type="radio" name="optradio" value="suzie"
 				       onclick="setFormUpdate(this.value)">
-				      <img class="characterImg" src="images/characters/miranda/mirandaWalkDown.gif">
+				      <img class="characterImg" src="images/characters/suzie/suzieWalkDown.gif">
 				    </label>
 				    <button type='submit' class="btn btn-default">
 				    Update
@@ -90,11 +90,12 @@
 
 	        </div>
 	        <div class="modal-footer">
-	        	<div id="actionButtons" class="btn-group">
-	        		<button id="actionChangeButton" type="button" class="btn btn-warning">Change</button>
+	        	<div id="actionButtons">
+	        		<button id="actionChangeButton" type="button" class="btn btn-warning">Change Avatar</button>
+	        		<button id="actionNewButton" type="button" class="btn btn-danger">New Container</button>
 	        		<button id="actionSetButton" type="button" class="btn btn-info">Set</button>
 	        		<button type="button" class="btn">D</button>
-	        		<button id="actionHealButton" type="button" class="btn btn-heal">Heal</button>
+	        		<button id="actionHealButton" type="button" class="btn btn-heal">Heal Container</button>
 	        		<button id="actionNewButton" type="button" class="btn btn-warning">New</button>
 	        		<button type="button" class="btn">D</button>
 	        		<button id="actionCollectButton" type="button" class="btn btn-success">Collect</button>
