add load scripts function

--- a/dump.html
+++ b/dump.html
@@ -267,9 +267,9 @@
 			      <img class="characterImg" src="images/characters/solomon/solomonWalkDown.gif">
 			    </label>
 			    <label class="radio-inline">
-			      <input type="radio" name="optradio" value="miranda"
+			      <input type="radio" name="optradio" value="suzie"
 			       onclick="setCharacter(this.value)">
-			      <img class="characterImg" src="images/characters/miranda/mirandaWalkDown.gif">
+			      <img class="characterImg" src="images/characters/suzie/suzieWalkDown.gif">
 			    </label>
 			    <button type='submit' class="btn btn-default">
 			    Submit
